--- a/app/src/main/res/layout/toolbar_edit1.xml
+++ b/app/src/main/res/layout/toolbar_edit1.xml
@@ -33,6 +33,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@{@string/angles_button_title}"
                 />
         <ImageButton
                 android:id="@+id/navigate_mode_button"
